--- a/index.html
+++ b/index.html
@@ -21,66 +21,38 @@
             <h5 class="ml11">
                 <span class="text-wrapper">
                     <span class="line line1"></span>
-                    <span class="letters">Web Developer</span>
+                    <span class="letters">Software Engineer</span>
                 </span>
             </h5>
             <br>
         </div>
-        <button class="enter_link btn raise">View My Work</button>
+        
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li class="navbar-li">
+                        <a class="navbar-link" href="#about-me">About Me</a>
+                    </li>
+                    <li class="navbar-li">
+                        <a class="navbar-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="navbar-li">
+                        <a class="navbar-link" href="#background">Background</a>
+                    </li>
+                    <li class="navbar-li">
+                        <a class="navbar-link" href="#hobbies">Hobbies</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <div class="container-fluid header-container">
         <header>
             <div class="header-title">
                 <h1>Skye Nguyen</h1>
             </div>
-            <div class="navbar">
-                <nav>
-                    <ul>
-                        <li class="navbar-li">
-                            <a class="navbar-link" href="#about-me">About Me</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a class="navbar-link" href="#projects">Projects</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a class="navbar-link" href="#background">Background</a>
-                        </li>
-                        <li class="navbar-li">
-                            <a class="navbar-link" href="#hobbies">Hobbies</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
         </header>
         <hr class="style">
-        <!-- <div class="container carousel-container" id="myCarousel">
-            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100 carousel-img" src="img/animal-shelter.png" alt="animal shelter" />
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100 carousel-img" src="img/flash-card.png" alt="flashcard">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100 carousel-img" src="img/election-map.png" alt="election map" />
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div> -->
 
         <main class="container-fluid">
             <div class="card" id="about-me">
@@ -96,7 +68,7 @@
                             <em>diversity promotor</em>, a reliable teammate, and a
                             <strong>creative problem solver</strong>.
                         </p>
-                        <p>I am currently attending Epicodus C# and React track full-time, which will commence in February,
+                        <p>I am currently attending Epicodus C# and React track full-time, which will conclude in February,
                             2019.</p>
 
                         <ol>
