--- a/index.html
+++ b/index.html
@@ -20,31 +20,28 @@
             <h1 class="title-splash">Skye Nguyen</h1>
             <h5 class="ml11">
                 <span class="text-wrapper">
-                    <span class="line line1"></span>
+                    <span class="line"></span>
                     <span class="letters">Software Engineer</span>
                 </span>
             </h5>
             <br>
         </div>
-        
-        <div class="navbar">
-            <nav>
-                <ul>
-                    <li class="navbar-li">
-                        <a class="navbar-link" href="#about-me">About Me</a>
-                    </li>
-                    <li class="navbar-li">
-                        <a class="navbar-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="navbar-li">
-                        <a class="navbar-link" href="#background">Background</a>
-                    </li>
-                    <li class="navbar-li">
-                        <a class="navbar-link" href="#hobbies">Hobbies</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li class="navbar-li" id="special-li">
+                    <a class="navbar-link" href="#about-me">About Me</a>
+                </li>
+                <li class="navbar-li">
+                    <a class="navbar-link" href="#projects">Projects</a>
+                </li>
+                <li class="navbar-li">
+                    <a class="navbar-link" href="#background">Background</a>
+                </li>
+                <li class="navbar-li">
+                    <a class="navbar-link" href="#hobbies">Hobbies</a>
+                </li>
+            </ul>
+        </nav>
     </div>
     <div class="container-fluid header-container">
         <header>
