remove bootstrap margin for class row

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/scripts.js"></script>
 </head>
 
-<body>
+<body class="container-fluid">
     <div class="pageNav">
         <nav>
             <ul>
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </div>
-    <div class="container-fluid" id="splashscreen">
+    <div id="splashscreen">
 
         <div id="layer"></div>
 
@@ -66,11 +66,10 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid header-container">
+    <div class="header-container">
         <main>
             <div class="card" id="about-me">
                 <h3 class="card-title">About Me</h3>
-
                 <div class="card-body">
                     <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
                     <div id="about-me-float">
