add hr to card titles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <div class="header-container">
         <main>
             <div class="card" id="about-me">
+                <hr class="lineDecor">
                 <h3 class="card-title">About Me</h3>
+                <hr class="lineDecor">
+
                 <div class="card-body">
                     <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
                     <div id="about-me-float">
@@ -93,9 +96,9 @@
                 </div>
             </div>
             <div class="card" id="projects">
-                <div class=" ">
-                    <h3 class="card-title">Projects</h3>
-                </div>
+                <hr class="lineDecor">
+                <h3 class="card-title">Projects</h3>
+                <hr class="lineDecor">
                 <div class="card-body">
                     <div class="row title-row">
                         <div class="col-md-3">
@@ -179,9 +182,9 @@
                 </div>
             </div>
             <div class="card" id="background">
-                <div class=" ">
-                    <h3 class="card-title">Background</h3>
-                </div>
+                <hr class="lineDecor">
+                <h3 class="card-title">Background</h3>
+                <hr class="lineDecor">
                 <div class="card-body">
                     <div class="row row-bg">
                         <div class="col-md-3 col-bg">
@@ -228,9 +231,9 @@
             <div class="card hobbies-card" id="hobbies">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class=" ">
-                            <h3 class="card-title">Hobbies</h3>
-                        </div>
+                        <hr class="lineDecor">
+                        <h3 class="card-title">Hobbies</h3>
+                        <hr class="lineDecor">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
@@ -259,9 +262,9 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class=" ">
-                            <h3 class="card-title">Let's get in touch!</h3>
-                        </div>
+                        <hr class="lineDecor">
+                        <h3 class="card-title">Let's get in touch!</h3>
+                        <hr class="lineDecor">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-2" id="socialMedia">
@@ -314,7 +317,6 @@
                                     </form>
                                     <br>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -325,7 +327,7 @@
             <span>Copyright © 2018
                 <a href="https://skye.dames.es">Skye Nguyen</a>. All Rights Reserved.</span>
         </footer>
-        </div>
+    </div>
 </body>
 
 </html>
