use pushstate to change url when scrolling

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="container-fluid">
     <div class="pageNav">
         <nav>
-            <ul>
-                <li class="navbar-li" id="special-li">
+            <ul id="movingNav">
+                <li class="navbar-li" class="special-li">
                     <a class="navbar-link" href="#about-me">About Me</a>
                 </li>
                 <li class="navbar-li">
@@ -48,7 +48,7 @@
             <div id="firstNav">
                 <nav>
                     <ul>
-                        <li class="navbar-li" id="special-li">
+                        <li class="navbar-li" class="special-li">
                             <a class="navbar-link" href="#about-me">About Me</a>
                         </li>
                         <li class="navbar-li">
@@ -70,7 +70,7 @@
         <main>
             <div class="card" id="about-me">
                 <hr class="lineDecor">
-                <h3 class="card-title">About Me</h3>
+                <h3 class="card-title" id="aboutMeTag">About Me</h3>
                 <hr class="lineDecor">
 
                 <div class="card-body">
