fix browser symbol errors

--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
                                 <li>
                                     <img src="img/linkedin.png" alt="linkedin-logo" width="10%">&nbsp;&nbsp;LinkedIn:
                                     <a>skyenguyen31</a>
-                                    
+
                                 </li>
                                 <li>
                                     <img src="img/github.png" alt="github-logo" width="10%">&nbsp;&nbsp;GitHub:
@@ -105,7 +105,7 @@
                                     <img class="company" src="img/klinger.png" alt="kigi-logo" width="70%">
                                 </div> -->
                                 <div class="col-md-9 position">
-                                    <h5>Regional Account Executive (Feb - July, 2018)</h5>
+                                    <h5>Regional Account Executive (Feb&ndash;July, 2018)</h5>
                                 </div>
                             </div>
                             <ul>
@@ -122,7 +122,7 @@
                                     <img class="company" src="img/carlisle.png" alt="kigi-logo" width="70%">
                                 </div> -->
                                 <div class="col-md-9 position">
-                                    <h5>Polyiso Quality Services R&amp;D Intern (M​ay – Aug, 2016)</h5>
+                                    <h5>Polyiso Quality Services R&amp;D Intern (M​ay&ndash;Aug, 2016)</h5>
                                 </div>
                             </div>
                             <ul>
@@ -141,7 +141,7 @@
                                     <img class="company" src="img/parker.png" alt="ph-logo" width="70%">
                                 </div> -->
                                 <div class="col-md-9 position">
-                                    <h5>R&amp;D Materials Engineering Co-op (July, 2014 - Nov, 2015)
+                                    <h5>R&amp;D Materials Engineering Co-op (July, 2014&ndash;Nov, 2015)
                                     </h5>
                                 </div>
                             </div>
@@ -177,12 +177,12 @@
                         <div class="card-body">
                             <ul>
                                 <li>Winner ​of the A. McLaren White Award for​ First Prize​ in the​ AIChE Design Competition​
-                                    (2017)
+                                    &lpar;2017&rpar;
                                 </li>
-                                <li>Winner ​of the Inherently Safer Design Award in the ​ AIChE Design Competition​ (2017)</li>
-                                <li>Winner ​of the American Chemical Society​ Rubber Scholarship in 2015 and 2016 ($10,000)
+                                <li>Winner ​of the Inherently Safer Design Award in the ​ AIChE Design Competition​&lpar;2017&rpar;</li>
+                                <li>Winner ​of the American Chemical Society​ Rubber Scholarship in 2015 and 2016&lpar;$10,000&rpar;
                                 </li>
-                                <li>President​ of the AIChE Student Chapter at Trine University (2015-2016)</li>
+                                <li>President​ of the AIChE Student Chapter at Trine University&lpar;2015-2016&rpar;</li>
                                 <li>President​ of ​Tau Beta Pi - National engineering honor society​ Indiana Epsilon Chapter
                                     (2015-2016)
                                 </li>
