separate contacts and hobbies

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <div class="header-container">
         <main>
             <div class="card" id="about-me">
-                <hr class="lineDecor">
+
                 <h3 class="card-title" id="aboutMeTag">About Me</h3>
-                <hr class="lineDecor">
+
 
                 <div class="card-body">
-                    <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
+                    <img src="img/profile.jpg" alt="profile picture" width=30% id="profile" />
                     <div id="about-me-float">
                         <p> I am originally from Viet Nam and have been living in the United States for about seven years now.
                             I spent five of these years living and studying in northern Indiana before moving to Seattle
@@ -96,9 +96,9 @@
                 </div>
             </div>
             <div class="card" id="projects">
-                <hr class="lineDecor">
+
                 <h3 class="card-title">Projects</h3>
-                <hr class="lineDecor">
+
                 <div class="card-body">
                     <div class="row title-row">
                         <div class="col-md-3">
@@ -182,9 +182,9 @@
                 </div>
             </div>
             <div class="card" id="background">
-                <hr class="lineDecor">
+
                 <h3 class="card-title">Background</h3>
-                <hr class="lineDecor">
+
                 <div class="card-body">
                     <div class="row row-bg">
                         <div class="col-md-3 col-bg">
@@ -230,10 +230,9 @@
             </div>
             <div class="card hobbies-card" id="hobbies">
                 <div class="row">
-                    <div class="col-md-6">
-                        <hr class="lineDecor">
+                    <div>
                         <h3 class="card-title">Hobbies</h3>
-                        <hr class="lineDecor">
+
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
@@ -261,62 +260,64 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <hr class="lineDecor">
-                        <h3 class="card-title">Let's get in touch!</h3>
-                        <hr class="lineDecor">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-2" id="socialMedia">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
-                                                <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <a href="https://github.com/sn31" target="_blank">
-                                                <img class="contact" src="img/icons8-github-64.png" alt="github" />
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <a href="mailto:skye@dames.es">
-                                                <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <a href="./resume.html">
-                                                <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
-                                            </a>
-                                        </div>
+                </div>
+            </div>
+            <div class="card contact-card" id="contact">
+                <div>
+
+                    <h3 class="card-title">Let's get in touch!</h3>
+
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-2" id="socialMedia">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="https://www.linkedin.com/in/skyenguyen31/" target="_blank">
+                                            <img class="contact" src="img/icons8-linkedin-64.png" alt="linkedin" />
+                                        </a>
                                     </div>
                                 </div>
-                                <div class="col-md-10">
-                                    <form id="contact">
-                                        <div class="form-group">
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="First name">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Last name">
-                                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="https://github.com/sn31" target="_blank">
+                                            <img class="contact" src="img/icons8-github-64.png" alt="github" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="mailto:skye@dames.es">
+                                            <img class="contact" src="img/icons8-new-post-64.png" alt="email" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <a href="./resume.html">
+                                            <img class="contact" src="img/icons8-resume-64.png" alt="resume" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <form id="contact">
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <input type="text" class="form-control" placeholder="First name">
                                             </div>
-                                            <br>
-                                            <input type="text" class="form-control" placeholder="Email">
-                                            <br>
-                                            <input type="text" class="form-control" placeholder="Message">
+                                            <div class="col-md-6">
+                                                <input type="text" class="form-control" placeholder="Last name">
+                                            </div>
                                         </div>
-                                        <button class="btn btn-info" id="submit" type="submit">Contact</button>
-                                    </form>
-                                    <br>
-                                </div>
+                                        <br>
+                                        <input type="text" class="form-control" placeholder="Email">
+                                        <br>
+                                        <input type="text" class="form-control" placeholder="Message">
+                                    </div>
+                                    <button class="btn btn-info" id="submit" type="submit">Contact</button>
+                                </form>
+                                <br>
                             </div>
                         </div>
                     </div>
