--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@
                                     <img class="company" src="img/klinger.png" alt="kigi-logo" width="70%">
                                 </div> -->
                                 <div class="col-md-9 position">
-                                    <h5>Regional Account Executive (Feb&ndash;July, 2018)</h5>
+                                    <h5>Regional Account Executive (Feb &ndash; July, 2018)</h5>
                                 </div>
                             </div>
                             <ul>
@@ -122,7 +122,7 @@
                                     <img class="company" src="img/carlisle.png" alt="kigi-logo" width="70%">
                                 </div> -->
                                 <div class="col-md-9 position">
-                                    <h5>Polyiso Quality Services R&amp;D Intern (M​ay&ndash;Aug, 2016)</h5>
+                                    <h5>Polyiso Quality Services R &amp; D Intern (M​ay&nbsp;&ndash;&nbsp;Aug, 2016)</h5>
                                 </div>
                             </div>
                             <ul>
@@ -133,7 +133,7 @@
                                 <li> Performed formal trial runs for the top five products at different chemical ratios to address
                                     dimensional stability issues and convinced the plant to switch formulation as a result.</li>
                                 <li>Automated SPC data analyzing process for using MiniTab to save five weeks of labor annually.</li>
-                                <li>Published a Quality Matters article titled “Polyiso Foam Head Standardization”.</li>
+                                <li>Published a Quality Matters article titled&nbsp;&quot;Polyiso Foam Head Standardization&quot;.</li>
                             </ul>
                             <hr>
                             <div class="row">
@@ -176,14 +176,14 @@
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Winner ​of the A. McLaren White Award for​ First Prize​ in the​ AIChE Design Competition​
+                                <li>Winner:&nbsp;A. McLaren White Award for​&nbsp;First&nbsp;Prize​&nbsp;in the​ AIChE Design Competition​
                                     &lpar;2017&rpar;
                                 </li>
-                                <li>Winner ​of the Inherently Safer Design Award in the ​ AIChE Design Competition​&lpar;2017&rpar;</li>
-                                <li>Winner ​of the American Chemical Society​ Rubber Scholarship in 2015 and 2016&lpar;$10,000&rpar;
+                                <li>Winner:&nbsp;Inherently Safer Design Award in the ​AIChE Design Competition​&nbsp;&lpar;2017&rpar;</li>
+                                <li>Winner:&nbsp;American Chemical Society​&nbsp;Rubber Scholarship in 2015 and 2016&nbsp;&lpar;$10,000&rpar;
                                 </li>
-                                <li>President​ of the AIChE Student Chapter at Trine University&lpar;2015-2016&rpar;</li>
-                                <li>President​ of ​Tau Beta Pi - National engineering honor society​ Indiana Epsilon Chapter
+                                <li>President​:&nbsp;AIChE Student Chapter at Trine University &lpar;2015-2016&rpar;</li>
+                                <li>President​:&nbsp;Tau Beta Pi - National engineering honor society​&nbsp;Indiana Epsilon Chapter
                                     (2015-2016)
                                 </li>
                             </ul>
