--- a/resume.html
+++ b/resume.html
@@ -137,9 +137,6 @@
                             </ul>
                             <hr>
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <img class="company" src="img/parker.png" alt="ph-logo" width="70%">
-                                </div> -->
                                 <div class="col-md-9 position">
                                     <h5>R&amp;D Materials Engineering Co-op (July, 2014&ndash;Nov, 2015)
                                     </h5>
@@ -176,8 +173,8 @@
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Winner:&nbsp;A. McLaren White Award for​&nbsp;First&nbsp;Prize​&nbsp;in the​ AIChE Design Competition​
-                                    &lpar;2017&rpar;
+                                <li>Winner:&nbsp;A. McLaren White Award for​&nbsp;First&nbsp;Prize​&nbsp;in the​ AIChE Design
+                                    Competition​ &lpar;2017&rpar;
                                 </li>
                                 <li>Winner:&nbsp;Inherently Safer Design Award in the ​AIChE Design Competition​&nbsp;&lpar;2017&rpar;</li>
                                 <li>Winner:&nbsp;American Chemical Society​&nbsp;Rubber Scholarship in 2015 and 2016&nbsp;&lpar;$10,000&rpar;
