--- a/resume.html
+++ b/resume.html
@@ -45,22 +45,20 @@
                                 <li>Proficient in:
                                     <ul>
                                         <li>Git &amp; GitHub</li>
-                                        <li>HTML, CSS &amp; BootStrap</li>
-                                        <li>Javascript &amp; jQuery</li>
-                                        <li>Visio</li>
+                                        <li>C&nbsp;#&amp;&nbsp;.NET Core</li>
+                                        <li>HTML, CSS&nbsp;&amp;&nbsp;BootStrap</li>
+                                        <li>JavaScript with jQuery&nbsp;&amp;&nbsp;React</li>
+                                        <li>Angular</li>
                                         <li>ChemCad</li>
-                                        <li>MatLab</li>
-                                        <li>MiniTab</li>
-                                        <li>PolyMath</li>
-                                        <li>LaTex</li>
+                                        <li>MatLab, MiniTab, PolyMath</li>
                                     </ul>
                                     <hr>
                                     <li>Familiar with:
                                         <ul>
-                                            <li>React</li>
-                                            <li>Firebase Authentication &amp; Firestore</li>
+                                            <li>Xamarin.Mac</li>
+                                            <li>React Native</li>
+                                            <li>Firebase</li>
                                         </ul>
-
                             </ul>
                         </div>
                         <div class="card-header">
@@ -79,7 +77,6 @@
                                 <li>
                                     <img src="img/linkedin.png" alt="linkedin-logo" width="10%">&nbsp;&nbsp;LinkedIn:
                                     <a>skyenguyen31</a>
-
                                 </li>
                                 <li>
                                     <img src="img/github.png" alt="github-logo" width="10%">&nbsp;&nbsp;GitHub:
@@ -89,9 +86,7 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
-
             </div>
             <div class="col-md-9">
                 <div class="row">
@@ -101,11 +96,22 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <img class="company" src="img/klinger.png" alt="kigi-logo" width="70%">
-                                </div> -->
-                                <div class="col-md-9 position">
-                                    <h5>Regional Account Executive (Feb &ndash; July, 2018)</h5>
+                                <div class="col-md-12 position">
+                                    <h5>C&#35; Developer Intern&nbsp;&ndash;&nbsp;Indent Labs, LLC. (Oct, 2018&#45;Current)</h5>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>Planning and developing a new kind of word processor for writers using C&#35;, related technologies,
+                                    and frameworks.</li>
+                                <li>Architecting and implementing high-quality production C&#35; code to be shipped directly
+                                    to consumers.</li>
+                                <li>Sufficiently testing written code to prove correctness and robustness.</li>
+                                <li>Effectively communicating status and progress along a rapid development timeline.</li>
+                            </ul>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-12 position">
+                                    <h5>Regional Account Executive&nbsp;&ndash;&nbsp;Klinger IGI, Inc. (Feb&ndash;July, 2018)</h5>
                                 </div>
                             </div>
                             <ul>
@@ -118,37 +124,31 @@
                             </ul>
                             <hr>
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <img class="company" src="img/carlisle.png" alt="kigi-logo" width="70%">
-                                </div> -->
-                                <div class="col-md-9 position">
-                                    <h5>Polyiso Quality Services R &amp; D Intern (M​ay&nbsp;&ndash;&nbsp;Aug, 2016)</h5>
-                                </div>
-                            </div>
-                            <ul>
-                                <li>Established detailed process documentation (PFMEA, Control plans, and SOPs) for the foam
-                                    head operation to prepare the plant for the upcoming company-wide standardization effort.</li>
-                                <li>Established a baseline of key parameters necessary to produce quality foam and generated
-                                    the appropriate tolerances for these parameters using SPC.</li>
-                                <li> Performed formal trial runs for the top five products at different chemical ratios to address
-                                    dimensional stability issues and convinced the plant to switch formulation as a result.</li>
-                                <li>Automated SPC data analyzing process for using MiniTab to save five weeks of labor annually.</li>
-                                <li>Published a Quality Matters article titled&nbsp;&quot;Polyiso Foam Head Standardization&quot;.</li>
-                            </ul>
-                            <hr>
-                            <div class="row">
-                                <div class="col-md-9 position">
-                                    <h5>R&amp;D Materials Engineering Co-op (July, 2014&ndash;Nov, 2015)
+                                <div class="col-md-12 position">
+                                    <h5>Polyiso Quality Services Intern&nbsp;&ndash;&nbsp;Carlisle Construction Materials (M​ay&ndash;Aug,
+                                        2016)
                                     </h5>
                                 </div>
                             </div>
                             <ul>
-
-                                <li>Developed three NBR compounds for packer element applications (EAV: $2M).</li>
-                                <li>Compounded and performed analytical testing for 30+ elastomers using ASTM D2000 standards
-                                    and customer specifications.</li>
-                                <li>Investigated existing literature on FKM at high temperatures to formulate a new HEHT compound
-                                    for down-hole electrical applications.</li>
+                                <li>Established detailed process documentation for the foam head operation.</li>
+                                <li>Established a baseline of key parameters and generated the appropriate tolerances using SPC.</li>
+                                <li> Performed formal trial runs for the top five products at different chemical ratios to address
+                                    dimensional stability issues and convinced the plant to switch formulation as a result.</li>
+                                <li>Automated SPC data analyzing process for using MiniTab to save five weeks of labor annually.</li>
+                            </ul>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-12 position">
+                                    <h5>R&amp;D Materials Engineering Co&ndash;op&nbsp;&ndash;&nbsp;Parker Hannifin (July, 2014&ndash;Nov,
+                                        2015)
+                                    </h5>
+                                </div>
+                            </div>
+                            <ul>
+                                <li>Developed three NBR compounds for packer element applications (EAV: &#36;2M).</li>
+                                <li>Compounded and performed analytical testing using ASTM D2000 standards and customer specifications.</li>
+                                <li>Investigated literature to formulate a new HEHT FKM compound for down-hole electrical applications.</li>
                                 <li>Conducted process variable studies to reduce the duration of the existing API Extrusion Resistance
                                     Testing procedure from 60 to 20 minutes.</li>
                             </ul>
@@ -158,14 +158,10 @@
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Assisted SpaceX's satellite team in finding a special harness tape. </li>
-                                <li>Designed and analyzed an industrial process for the production of Nylon 6,6 in different
-                                    market conditions.</li>
-                                <li>Designed the stopping mechanism for the Trine ChE Car competing at AIChE National Competition
-                                    2016.
-                                </li>
-                                <li>Conceptualized and built Cospedia - a web application that allows the users to keep track
-                                    of cosmetics and their expiration dates.</li>
+                                <li>Conceptualized and built Cospedia - a web application to keep track of cosmetics and their
+                                    expiration dates.</li>
+                                <li>Designed and analyzed an industrial process to produce Nylon 6,6 in different market conditions.</li>
+                                <li>Designed the stopping mechanism for the Trine ChE Car competing at AIChE National Competition.</li>
                             </ul>
                         </div>
                         <div class="card-header">
@@ -173,19 +169,19 @@
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Winner:&nbsp;A. McLaren White Award for​&nbsp;First&nbsp;Prize​&nbsp;in the​ AIChE Design
-                                    Competition​ &lpar;2017&rpar;
+                                <li>Winner:&nbsp;A. McLaren White Award for first prize in the AIChE Design
+                                    Competition &lpar;2017&rpar;
                                 </li>
-                                <li>Winner:&nbsp;Inherently Safer Design Award in the ​AIChE Design Competition​&nbsp;&lpar;2017&rpar;</li>
-                                <li>Winner:&nbsp;American Chemical Society​&nbsp;Rubber Scholarship in 2015 and 2016&nbsp;&lpar;$10,000&rpar;
+                                <li>Winner&#58;&nbsp;Inherently Safer Design Award in the AIChE Design Competition&lpar;2017&rpar;</li>
+                                <li>Winner&#58;&nbsp;American Chemical Society Rubber Scholarship in 2015 and 2016 &#40;$10,000&#41;
                                 </li>
-                                <li>President​:&nbsp;AIChE Student Chapter at Trine University &lpar;2015-2016&rpar;</li>
-                                <li>President​:&nbsp;Tau Beta Pi - National engineering honor society​&nbsp;Indiana Epsilon Chapter
-                                    (2015-2016)
+                                <li>President&#58;&nbsp;AIChE Student Chapter at Trine University &lpar;2015&ndash;2016&rpar;</li>
+                                <li>President&#58;&nbsp;Tau Beta Pi&nbsp;&#45;&nbsp;National engineering honor society&nbsp;Indiana
+                                    Epsilon Chapter (2015&ndash;2016)
                                 </li>
                             </ul>
                         </div>
-                        <div class="card-header">
+                        <!-- <div class="card-header">
                             <h4>Interests</h4>
                         </div>
                         <div class="card-body">
@@ -200,7 +196,7 @@
                                     <p>Technological improvements in Viet Nam</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
